test/errors/class_abstract_override_fail.hy
abstract class Shape
{
    abstract void Draw()
}

class BadSquare inherits Shape
{
    BadSquare() {}
}

// expect: Class 'BadSquare' must override abstract member 'Shape.Draw' defined in 'Shape'